WIP: fix pagination alignment for digipal browse and adv search.

--- a/digipal/static/css/dpbase.less
+++ b/digipal/static/css/dpbase.less
@@ -736,7 +736,8 @@ div.has-switch:focus {
 
 .pagination-group .btn-group {
     margin-right: -1px;
-    margin-top: 15px;
+    /* margin-top: 15px; */
+    margin-top: 0;
 }
 
 .pagination-group .btn-group .btn {
